export const snapshot = {};

snapshot[`global > Absolute Positioning - Snapshot Tests > Basic absolute positioning > absolute positioned box at top-left 1`] = `
"┌─────────────┐                         
│Top Left     │                         
│             │                         
│             │                         
└─────────────┘                         
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Basic absolute positioning > absolute positioned box at bottom-right using right/bottom 1`] = `
"                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                         ┌─────────────┐
                         │Bottom Right │
                         │             │
                         │             │
                         └─────────────┘
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Basic absolute positioning > absolute positioned box centered with left/top 1`] = `
"                                        
                                        
                                        
                                        
                                        
          ┌──────────────────┐          
          │Centered          │          
          │                  │          
          │                  │          
          │                  │          
          │                  │          
          │                  │          
          └──────────────────┘          
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Nested absolute positioning > absolute child inside absolute parent - basic 1`] = `
"                                        
                                        
                                        
     ┌────────────────────────────┐     
     │                            │     
     │  ┌──────────┐              │     
     │  │Nested    │              │     
     │  │          │              │     
     │  └──────────┘              │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     └────────────────────────────┘     
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Nested absolute positioning > absolute child at bottom:0 inside absolute parent (issue #406 fix) 1`] = `
"                                        
                                        
     ┌────────────────────────────┐     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │  ┌─────────────┐           │     
     │  │At Bottom    │           │     
     │  └─────────────┘           │     
     └────────────────────────────┘     
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Nested absolute positioning > absolute child at right:0 inside absolute parent 1`] = `
"                                        
                                        
  ┌─────────────────────────────────┐   
  │                                 │   
  │                     ┌──────────┐│   
  │                     │At Right  ││   
  │                     │          ││   
  │                     └──────────┘│   
  │                                 │   
  │                                 │   
  │                                 │   
  │                                 │   
  │                                 │   
  └─────────────────────────────────┘   
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Nested absolute positioning > absolute child at bottom-right corner inside absolute parent 1`] = `
"                                        
   ┌────────────────────────────────┐   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                 ┌────────────┐ │   
   │                 │Corner      │ │   
   │                 │            │ │   
   │                 └────────────┘ │   
   │                                │   
   └────────────────────────────────┘   
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Nested absolute positioning > multiple absolute children inside absolute parent at different positions 1`] = `
"                                        
  ┌──────────────────────────────────┐  
  │                                  │  
  │ ┌────────┐            ┌────────┐ │  
  │ │TL      │            │TR      │ │  
  │ └────────┘            └────────┘ │  
  │                                  │  
  │                                  │  
  │                                  │  
  │                                  │  
  │                                  │  
  │                                  │  
  │                                  │  
  │ ┌────────┐            ┌────────┐ │  
  │ │BL      │            │BR      │ │  
  │ └────────┘            └────────┘ │  
  │                                  │  
  └──────────────────────────────────┘  
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Three-level nesting > deeply nested absolute positioning - grandchild at bottom 1`] = `
"                                        
 ┌────────────────────────────────────┐ 
 │                                    │ 
 │                                    │ 
 │  ┌──────────────────────────────┐  │ 
 │  │                              │  │ 
 │  │                              │  │ 
 │  │                              │  │ 
 │  │                              │  │ 
 │  │                              │  │ 
 │  │                              │  │ 
 │  │  ┌─────────────┐             │  │ 
 │  │  │Deep         │             │  │ 
 │  │  └─────────────┘             │  │ 
 │  │                              │  │ 
 │  └──────────────────────────────┘  │ 
 │                                    │ 
 │                                    │ 
 └────────────────────────────────────┘ 
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Mixed positioning > absolute child inside relative parent 1`] = `
"                                        
                                        
   ┌────────────────────────────┐       
   │                            │       
   │                            │       
   │                            │       
   │                            │       
   │                            │       
   │                            │       
   │                            │       
   │               ┌──────────┐ │       
   │               │Absolute  │ │       
   │               │          │ │       
   │               └──────────┘ │       
   │                            │       
   └────────────────────────────┘       
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Mixed positioning > sibling absolute elements at same level 1`] = `
"┌─────────────┐                         
│Box 1        │                         
│             │                         
│             │                         
│           ┌─────────────┐             
└───────────│Box 2        │             
            │             │             
            │             │             
            │           ┌─────────────┐ 
            └───────────│Box 3        │ 
                        │             │ 
                        │             │ 
                        │             │ 
                        └─────────────┘ 
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute positioned box with negative coordinates (partially off-screen) 1`] = `
"              │                         
              │                         
              │                         
              │                         
              │                         
──────────────┘                         
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute positioned box extending beyond viewport 1`] = `
"                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                              ┌─────────
                              │Overflow 
                              │         
                              │         
                              │         
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute child fills parent completely 1`] = `
"                                        
                                        
                                        
     ┌────────────────────────────┐     
     │╔══════════════════════════╗│     
     │║Full                      ║│     
     │║                          ║│     
     │║                          ║│     
     │║                          ║│     
     │║                          ║│     
     │║                          ║│     
     │║                          ║│     
     │║                          ║│     
     │╚══════════════════════════╝│     
     └────────────────────────────┘     
                                        
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute positioned box with percentage width inside absolute parent 1`] = `
"                                                  
                                                  
     ┌──────────────────────────────────────┐     
     │                                      │     
     │                                      │     
     │                                      │     
     │                                      │     
     │                                      │     
     │                                      │     
     │                                      │     
     │                                      │     
     │  ┌─────────────────┐                 │     
     │  │50%              │                 │     
     │  │                 │                 │     
     │  └─────────────────┘                 │     
     │                                      │     
     └──────────────────────────────────────┘     
                                                  
                                                  
                                                  
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute positioned box with percentage height inside absolute parent 1`] = `
"                                        
                                        
     ┌────────────────────────────┐     
     │                            │     
     │  ┌─────────────┐           │     
     │  │50% H        │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  └─────────────┘           │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     │                            │     
     └────────────────────────────┘     
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute child with conflicting insets (left and right without explicit width) 1`] = `
"                                        
                                        
   ┌────────────────────────────────┐   
   │                                │   
   │                                │   
   │  ┌──────────────────────────┐  │   
   │  │Stretch                   │  │   
   │  │                          │  │   
   │  │                          │  │   
   │  └──────────────────────────┘  │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   │                                │   
   └────────────────────────────────┘   
                                        
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Edge cases > absolute child with conflicting insets (top and bottom without explicit height) 1`] = `
"                                        
     ┌────────────────────────────┐     
     │                            │     
     │  ┌─────────────┐           │     
     │  │VStretch     │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  │             │           │     
     │  └─────────────┘           │     
     │                            │     
     └────────────────────────────┘     
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Complex hierarchies > relative parent with absolute child containing absolute grandchild 1`] = `
"                                        
  ┌─────────────────────────────────┐   
  │                                 │   
  │  ┌──────────────────────────┐   │   
  │  │                          │   │   
  │  │                          │   │   
  │  │                          │   │   
  │  │                          │   │   
  │  │                          │   │   
  │  │             ┌──────────┐ │   │   
  │  │             │Grand     │ │   │   
  │  │             │          │ │   │   
  │  │             └──────────┘ │   │   
  │  │                          │   │   
  │  └──────────────────────────┘   │   
  │                                 │   
  └─────────────────────────────────┘   
                                        
                                        
                                        
"
`;

snapshot[`global > Absolute Positioning - Snapshot Tests > Complex hierarchies > multiple nested relative and absolute layers 1`] = `
"┌────────────────────────────────────┐  
│                                    │  
│  ┌──────────────────────────────┐  │  
│  │                              │  │  
│  │ ┌──────────────────────────┐ │  │  
│  │ │                          │ │  │  
│  │ │                          │ │  │  
│  │ │                          │ │  │  
│  │ │                          │ │  │  
│  │ │               ┌────────┐ │ │  │  
│  │ │               │Deep    │ │ │  │  
│  │ │               └────────┘ │ │  │  
│  │ │                          │ │  │  
│  │ └──────────────────────────┘ │  │  
│  │                              │  │  
│  └──────────────────────────────┘  │  
│                                    │  
└────────────────────────────────────┘  
                                        
                                        
"
`;
